--- a/week_5_coding.Rmd
+++ b/week_5_coding.Rmd
@@ -78,3 +78,127 @@ Insert the alternative part because it is one sided. The term could be greater o
 t.test(chinstraps_m, chinstraps_f, alternative = "greater")
 ```
 
+
+
+## One-way ANOVA
+
+## 1. Table of counts by species and sex
+
+```{r}
+penguin_counts <- penguins %>% 
+  count(species, sex)
+
+penguin_counts
+```
+
+Create a subset of only female penguins
+
+scale = "free" is added so that each graph can have different x and y axis
+```{r}
+penguin_f <- penguins %>% 
+  filter(sex == "female")
+
+ggplot(data = penguin_f, aes(x = flipper_length_mm)) +
+  geom_histogram(aes(fill = species)) +
+  facet_wrap(~species, scales = "free")
+
+ggplot(data = penguin_f, aes(sample = flipper_length_mm)) +
+  geom_qq(aes(color = species)) +
+  facet_wrap(~species, scales = "free")
+```
+
+### Summary statistics
+
+Starting from penguins_f, create a summary table that groups by species, and retuns the following:
+
+- mean of flipper length
+- sd ""
+- sample size
+- variance `var`
+- standard error = sd / sqrt(n)
+
+```{r}
+penguin_f_summary <- penguin_f %>% 
+  group_by(species) %>% 
+  summarize(
+    mean_flipper_length = mean(flipper_length_mm),
+    sd_flipper_length = sd(flipper_length_mm),
+    sample_size = n(),
+    se_flipper_length = sd(flipper_length_mm)/sqrt(n()),
+    var_flipper_length = var(flipper_length_mm))
+
+penguin_f_summary
+```
+There are close enough variances to be able to run an ANOVA.  The largest needs to be within 4x the smallest variance and in this case the 33.10963 variance for Chinstrap is only about 2x the variance of Gentoos at 15.19328.  So these are well within the required parameters to be able to run in an ANOVA.
+
+
+```{r}
+leveneTest(flipper_length_mm ~ species, data = penguin_f)
+```
+
+This also backs up that the variances are close enough.
+
+### Beeswarm plot with mean +- 1sd
+
+```{r}
+ggplot() +
+  geom_beeswarm(data = penguin_f, 
+                aes(x=species, y=flipper_length_mm), 
+                color = "gray70", 
+                size = 3, 
+                alpha = 0.5) +
+  geom_point(data = penguin_f_summary, 
+             aes(x = species, y = mean_flipper_length),
+             size = 4) +
+  geom_errorbar(data = penguin_f_summary,
+                aes(x = species, 
+                    ymax = mean_flipper_length + sd_flipper_length,
+                    ymin = mean_flipper_length - sd_flipper_length),
+                width = 0.1) +
+  theme_light()
+```
+
+### One-way ANOVA
+
+aov runs type 1 anova
+
+usually in env. sci. you want to use type 3
+
+```{r}
+penguin_aov <- aov(flipper_length_mm ~ species, data = penguin_f)
+summary(penguin_aov)
+```
+
+F statistic, which here, is 411.8 is the ratio of the between group variance (sum of squares) to to the within group variance (sum of squares).  This one is very large.  The variance between groups is very large compared to the variance within groups.  Reflected in the p-value since it is so low.  Reject the null that the means for all these groups is the same.
+
+post hoc test
+```{r}
+TukeyHSD(penguin_aov)
+```
+
+
+
+If you have very unbalanced data (very diff sample sizes in your groups, etc.) (like you probably would in env. sci).  Want to do type III anova with teh car package:
+```{r}
+penguin_lm <- lm(flipper_length_mm ~ species, data = penguin_f)
+penguin_aov_t3 <- Anova(penguin_lm, type = "III")
+penguin_aov_t3
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
